Fixed alignment issues

--- a/style_sheets/homework.css
+++ b/style_sheets/homework.css
@@ -1,13 +1,13 @@
 #row1 {
     text-align:center;
-    padding-top: 2rem;
-}
-
-p {
-    padding-top: 5rem;
-    text-align: left;
+    margin-left: .5rem;
 }
 
 body {
     padding-top: 7rem;
+}
+
+footer{
+    text-align:center;
+    padding-top:3rem;
 }
